refactor: remove unused dependencies and update ollama container name in docker-compose